apps/be-bff/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-bff
  namespace: app
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: be-bff
  template:
    metadata:
      labels:
        app.kubernetes.io/name: be-bff
      annotations:
        instrumentation.opentelemetry.io/inject-java: "pltform-observability/java-instrumentation"
    spec:
      imagePullSecrets:
        - name: harbor-credentials
      containers:
        - name: be-bff
          image: harbor.platform.local/app/be-bff:367ecb4b
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
          resources:
            requests:
              memory: "256Mi"
              cpu: "10m"
            limits:
              memory: "512Mi"
              cpu: "500m"
