apps/be-bff/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-bff
  namespace: app
spec:
  selector:
    app.kubernetes.io/name: be-bff
  ports:
    - port: 8080
      targetPort: 8080
