apps/be-bff/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-bff
  namespace: app
spec:
  rules:
    - host: bff.platform.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: be-bff
                port:
                  number: 8080
